# debugprobe-rs

./: .gitignore  CLAUDE.md  Cargo.toml  MULTI-TARGET.md  README.md  STRESS-test.md  TEST-plan.html  TEST-stm32f401.html  TEST-stm32f401.md  TEST-stm32f446re.html  TEST-stm32f446re.md  TEST-trigorilla-vyper.html  TEST-trigorilla-vyper.md  TODO.md  WIRING-rp2040-stm32f103.html  build.rs  flash.sh  memory_rp2040.x  memory_rp2350.x  rust-toolchain.toml
.cargo/: config.toml
docs/: signal-sampling.md
release/: debugprobe.uf2  debugprobe_PREREFACTOR.uf2  debugprobe_on_pico.uf2  debugprobe_on_pico2.uf2  debugprobe_pico_DIAG.uf2  debugprobe_pico_MIN.uf2  debugprobe_pico_chipdetect.uf2  debugprobe_pico_swdslew.uf2  test-01-swdio.uf2  test_gp.uf2  v-b104ec0.uf2  v-e02f2a9.uf2  v0.2.1.uf2  v0.3.1.uf2
src/: autobaud.rs  chipdb.rs  display.rs  logic.rs  main.rs  scan.rs  serial.rs  state.rs  tasks.rs  testkit.rs  uart.rs  wiring.rs
src/board/: debug_probe.rs  mod.rs  pico.rs  pico2.rs
src/dap/: detect.rs  mod.rs  swd.rs  types.rs
src/probe/: mod.rs
src/usb/: mod.rs
stm32f103-target/: Cargo.toml  rust-toolchain.toml
stm32f103-target/.cargo/: config.toml
stm32f103-target/src/: main.rs
stm32f401-target/: Cargo.toml
stm32f401-target/.cargo/: config.toml
stm32f401-target/src/: main.rs
stm32f446-target/: Cargo.toml
stm32f446-target/.cargo/: config.toml
stm32f446-target/src/: main.rs
