[package]
name = "debugprobe-rs"
version = "0.4.1"
edition = "2024"
description = "Raspberry Pi Debug Probe firmware, rewritten in Rust on Embassy (RP2040 / RP2350)"
license = "MIT"

[dependencies]
# --- Embassy async framework (取代 FreeRTOS) ---
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.10", features = ["time-driver", "critical-section-impl", "defmt", "binary-info", "unstable-pac"] }
embassy-usb = { version = "0.6", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-futures = "0.1"
embedded-io-async = "0.7"

# --- Cortex-M runtime / 同步原語 ---
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.2"
portable-atomic = { version = "1", features = ["critical-section"] }
static_cell = "2.1"
heapless = "0.9"

# --- PIO 組譯 (SWD / AutoBaud 物理層) ---
pio = "0.3"
pio-proc = "0.3"
fixed = "1"

# 板上 OLED 狀態顯示（SSD1306 0.96" 128x64 I2C）
ssd1306 = "0.10"
embedded-graphics = "0.8"

# --- 除錯輸出 (取代 probe_info/printf) ---
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

[features]
default = ["board-debug-probe", "active-detect"]

# 主動偵測 + OLED：core1 上的 OLED 狀態顯示、邏輯波形擷取，以及 dap_task 閒置時的
# 自主 layer-2 晶片偵測。關掉(用 *-min 別名)→ 純 CMSIS-DAP/USB/UART 探針，core0 不主動碰 SWD，
# 用來區隔「燒錄問題是否來自主動偵測/OLED 機制」。
active-detect = []

# 診斷用：即使 USB host 在線(插著 PC)也讓 OLED 自主偵測照跑。平常穩定版是「有 host 就不偵測」
# (避免自主偵測在 host 兩次存取間清掉鏈路 → 不穩)。此 feature 用於「只看 OLED、不跑除錯工具」
# 時，獨立判斷目標是否回應；**勿與 probe-rs/OpenOCD/usbipd-rs 同時使用**(會互相干擾)。
force-detect = ["active-detect"]

# 晶片選擇 (對應 C 的 PICO_BOARD / target)
rp2040 = ["embassy-rp/rp2040"]
rp2350 = ["embassy-rp/rp235xa"]

# 板級選擇 (對應 C 的 board_*.h / DEBUG_ON_PICO)
board-debug-probe = ["rp2040"]   # 正式 Debug Probe 硬體 → debugprobe.uf2
board-pico = ["rp2040"]          # Pico 1 → debugprobe_on_pico.uf2
board-pico2 = ["rp2350"]         # Pico 2 → debugprobe_on_pico2.uf2

[profile.dev]
opt-level = "s"      # Cortex-M 需要最佳化才能符合大小/時序
debug = 2

[profile.release]
opt-level = "s"
debug = 2
lto = "fat"
codegen-units = 1
